# GRIP

./: .gitignore  .jshint  .pullapprove.yml  .travis.yml  CONTRIBUTING.md  Gruntfile.js  LICENCE.txt  LICENSE.txt  README.md  _config.yml  appveyor.yml  azure-pipelines.yml  bower.json  build.gradle  build.gradle.kts  checkstyle.xml  checkstyleSuppressions.xml  codecov.yml  findBugsSuppressions.xml  git.gradle  google_checks.xml  gradle.properties  index.html  old-build-gradle  package.json  pmd-ruleset.xml  settings.gradle  testALL.grip
.azure-scripts/: push-javadoc-to-gh-pages.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy-javadoc.yml
.travis-scripts/: before-deploy.sh  install.sh  java-picker.sh  linux-opencv-install.sh  osx-opencv-install.sh  push-javadoc-to-gh-pages.sh
.utility/: push-javadoc-to-gh-pages.sh
_layouts/: post.html
_posts/: 2015-09-30-Progress-So-Far.md
annotation/: README.md  annotation.gradle.kts
bower_components/: index.html
bower_components/angular/: .bower.json
bower_components/angular-animate/: .bower.json
bower_components/angular-aria/: .bower.json
bower_components/angular-cookies/: .bower.json
bower_components/angular-mocks/: .bower.json
bower_components/angular-resource/: .bower.json
bower_components/angular-route/: .bower.json
bower_components/angular-sanitize/: .bower.json
bower_components/angular-touch/: .bower.json  bower.json  package.json
buildSrc/: README.md  build.gradle  build.gradle.kts
buildSrc/src/gradle-script-kotlin/resources/: project-schema.json
buildSrc/src/main/kotlin/: BuildType.kt  JavaFXExtensions.kt  JpackageExec.kt  NativeConfigurations.kt  PlatformMapper.kt  ktgit.kt
buildSrc/src/main/resources/: .gitignore
buildSrc/src/test/java/templates/: SocketHintDeclarationTest.java
config/checkstyle/: checkstyle.xml  checkstyleSuppressions.xml
config/pmd/: RuleSet.xml
core/: core.gradle.kts
docs/presentation/: GRIP_Poster_24x36.pptx  GRIP_Poster_36x48.pptx  GRIP_Powerpoint.pptx
fonts/: Licence.txt
gradle/wrapper/: gradle-wrapper.properties
javadoc/: allclasses-frame.html  allclasses-index.html  allclasses-noframe.html  allclasses.html  allpackages-index.html  constant-values.html  deprecated-list.html  element-list  help-doc.html  index-all.html  index.html  member-search-index.js  overview-frame.html  overview-summary.html  overview-tree.html  package-list  package-search-index.js  serialized-form.html  type-search-index.js
javadoc/edu/wpi/grip/: Main.html  package-frame.html  package-summary.html  package-tree.html
javadoc/edu/wpi/grip/core/: Cleaner.html  Connection.Factory.html  Connection.html  ConnectionValidator.html  CoreCommandLineHelper.html  Description.html  FileManager.html  GRIPCoreModule.html  GripCoreModule.html  GripCudaModule.html  GripFileManager.html  GripFileModule.html  InputSocket.html  Loggers.html  Main.html  MatWrapper.html  NoSocketTypeLabel.html  Operation.Category.html  Operation.html  OperationDescription.Builder.html  OperationDescription.Category.html  OperationDescription.html  OperationMetaData.html  OutputSocket.html  Palette.html  Pipeline.html  PipelineRunner.html  PreviousNext.html  ProjectSettings.NetworkProtocol.html  ProjectSettings.html  Sink.html  Socket.Direction.html  Socket.html  SocketHint.Builder.html  SocketHint.View.html  SocketHint.html  SocketHints.Domain.html  SocketHints.Inputs.html  SocketHints.Outputs.html  SocketHints.html  (+10 more)
javadoc/edu/wpi/grip/preloader/: GripPreloader.html  HexagonGrid.html  Launch.html  package-frame.html  package-summary.html  package-tree.html
javadoc/edu/wpi/grip/ui/: AboutDialogController.html  ConnectionView.html  Controller.html  DeployController.html  DeployerController.Factory.html  DeployerController.html  ExceptionAlert.html  GRIPUIModule.html  GripUiModule.html  InputSocketView.html  Launch.html  Main.html  MainWindowController.html  MainWindowView.html  OperationController.Factory.html  OperationController.html  OperationListController.html  OperationView.html  OutputSocketView.html  PaletteController.html  PaletteView.html  PipelineView.html  ProjectSettingsEditor.html  SocketControlView.html  SocketHandleView.html  StepView.html  UICommandLineHelper.html  WarningAlert.html  package-frame.html  (+2 more)
libs/: .gitignore
samples/: find-contours.grip
scripts/: app.js
scripts/controllers/: about.js  header.js  main.js  posts.js
scripts/directives/: countdown.js
scripts/jquery/: Matrix.js
scripts/templates/: countdown.html
styles/: main.css
ui/: CameraTest.java  PipelineTest.java  build.gradle.kts  ui.gradle  ui.gradle.kts
ui/installer-files/mac/: GRIP.icns
ui/installer-files/win/: file-associations.properties
ui/linuxLauncher/: linuxLauncher.gradle
ui/preloader/: preloader.gradle  preloader.gradle.kts
ui/src/main/deploy/: launcher
ui/src/test/resources/edu/wpi/grip/ui/codegeneration/tools/: CMakeLists.txt  CppPipelineInterfacer.cpp  Handle.h  edu_wpi_grip_ui_codegeneration_tools_CppPipelineInterfacer.h
ui/src/test/resources/edu/wpi/grip/ui/codegeneration/tools/pipe/: AbsPipeline.cpp  AbsPipeline.h  CMakeLists.txt
ui/src/test/resources/edu/wpi/grip/ui/codegeneration/tools/realpipe/: CMakeLists.txt
views/: main.html  posts.html
web/: build.gradle  settings.gradle
web/client/: .gitignore  LICENSE  README.md  build.gradle  dev_server.js  index.html  package.json  tsconfig.json  tslint.json  typings.json
web/client/app/: actions.js  actions.ts  index.jsx  index.tsx  reducers.js  reducers.ts
web/client/app/components/: GripToolbar.jsx  GripToolbar.tsx  app.jsx  app.tsx  counter.jsx  counter.tsx  counter_list.jsx  counter_list.tsx  operation.js  operation.jsx  operation.tsx  operation_list.jsx  operation_list.tsx  style.scss  style.scss.d.ts
web/client/config/: webpack.dev.js  webpack.prod.js
web/client/custom_typings/: react-flexbox-grid.d.ts
web/server/: build.gradle
web/server/swagger-template/: api.mustache  apiServiceImpl.mustache
web/spec/: swagger.yaml
web/swagger-template/: api.mustache  typings.json.mustache
(+1913 files in other folders)
